--- a/tailwind.css
+++ b/tailwind.css
@@ -12,13 +12,14 @@ body {
     @apply font-sans antialiased bg-gray-200;
 }
 
-.logo-slash {
-    background-image: linear-gradient(to right, currentcolor, transparent);
-}
-.divider-slash {
+.bg-split {
     background-image: linear-gradient(
         135deg,
         currentColor 66%,
         transparent 66%
     );
+}
+
+.text-indent-8 {
+    text-indent: 2rem;
 }
