--- a/tailwind.css
+++ b/tailwind.css
@@ -3,12 +3,23 @@
 
 @tailwind utilities;
 
+body {
+    @apply font-sans antialiased bg-gray-200;
+}
 #__next {
     @apply min-h-screen flex flex-col;
 }
 
-body {
-    @apply font-sans antialiased bg-gray-200;
+#page-content h1,
+#page-content h2,
+#page-content h3,
+#page-content h4,
+#page-content h5,
+#page-content h6 {
+    @apply text-gray-800;
+}
+#page-content {
+    @apply text-gray-700;
 }
 
 .bg-split {
