--- a/tailwind.css
+++ b/tailwind.css
@@ -10,16 +10,13 @@ body {
     @apply min-h-screen flex flex-col;
 }
 
-#page-content h1,
-#page-content h2,
-#page-content h3,
-#page-content h4,
-#page-content h5,
-#page-content h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     @apply text-gray-800;
-}
-#page-content {
-    @apply text-gray-700;
 }
 
 .bg-split {
