--- a/tailwind.css
+++ b/tailwind.css
@@ -26,12 +26,19 @@ h6 {
         transparent 66%
     );
 }
+.header-line {
+    height: 2px;
+    background-image: linear-gradient(
+        135deg,
+        transparent 5%,
+        currentColor 5%,
+        currentColor 95%,
+        transparent 95%
+    );
+}
 
 .text-indent-4 {
     text-indent: 1rem;
-}
-.text-indent-8 {
-    text-indent: 2rem;
 }
 
 .grid-auto-rows-1 {
